--- a/src/styles.css
+++ b/src/styles.css
@@ -60,11 +60,6 @@ main {
   border-radius: 10px;
   box-shadow: 0 5px 20px rgba(223, 208, 208, 0.514);
 }
-.forecast {
-  border-top: 1px solid #737bb9;
-  padding-top: 20px;
-  color: #33312f;
-}
 
 .current-temperature {
   font-size: 48px;
@@ -91,7 +86,7 @@ main {
 }
 
 .current-details strong {
-  color: #9ec8ff;
+  color: #afccf1;
 }
 
 #current-temperature-icon {
@@ -111,6 +106,40 @@ main {
   font-size: 20px;
   line-height: 80px;
   margin-top: 0px;
+}
+
+.forecast {
+  border-top: 1px solid #737bb9;
+  padding-top: 20px;
+  color: #33312f;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+.col-2 {
+  display: block;
+  text-align: center;
+  border-radius: 10px;
+  background-color: #00000015;
+  padding: 10px;
+  width: fit-content;
+  box-shadow: 0 2px 10px rgba(226, 214, 214, 0.308);
+}
+.weather-forecast-date {
+  font-size: 16px;
+  color: #e8eff3;
+}
+
+.weather-forecast-temp {
+  font-size: 13px;
+}
+
+#min-temp {
+  color: #bdaefc;
+}
+
+#max-temp {
+  font-weight: bold;
+  color: #e2dbff;
 }
 
 footer {
