--- a/src/styles.css
+++ b/src/styles.css
@@ -13,7 +13,7 @@ a {
 }
 
 .weather-app {
-  max-width: 600px;
+  max-width: 1000px;
   margin: 60px auto;
   padding: 30px;
   border-radius: 10px;
@@ -108,21 +108,33 @@ main {
   margin-top: 0px;
 }
 
-.forecast {
+.weatherForecast {
   border-top: 1px solid #737bb9;
   padding-top: 20px;
   color: #33312f;
   margin-top: 20px;
   margin-bottom: 20px;
 }
-.col-2 {
-  display: block;
+
+#forecast {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+  margin-top: 10px;
+}
+
+.weather-forecast-days {
+  display: relative;
   text-align: center;
   border-radius: 10px;
   background-color: #00000015;
   padding: 10px;
   width: fit-content;
   box-shadow: 0 2px 10px rgba(226, 214, 214, 0.308);
+}
+
+#weather-forecast-icon {
+  width: auto;
 }
 .weather-forecast-date {
   font-size: 16px;
