--- a/src/styles.css
+++ b/src/styles.css
@@ -13,7 +13,7 @@ a {
 }
 
 .weather-app {
-  max-width: 1000px;
+  max-width: 800px;
   margin: 60px auto;
   padding: 30px;
   border-radius: 10px;
@@ -33,17 +33,17 @@ header {
   color: #605e5c;
   font-size: 16px;
   padding: 20px;
-  width: 80%;
+  width: 75%;
   border-radius: 50px;
 }
 
 .search-button {
-  margin-left: 5px;
+  margin-left: 24px;
   font-size: 16px;
   background-color: #adb4e5;
   color: #33312f;
   border: none;
-  padding: 14px;
+  padding: 15px 20px;
   border-radius: 50px;
   transition: 0.2ms ease-in-out;
 }
@@ -122,6 +122,13 @@ main {
   flex-direction: row;
   margin-top: 10px;
 }
+#forecastStatus {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  text-align: center;
+  margin-top: 10px;
+}
 
 .weather-forecast-days {
   display: relative;
@@ -134,7 +141,8 @@ main {
 }
 
 #weather-forecast-icon {
-  width: auto;
+  width: 50px;
+  text-align: center;
 }
 .weather-forecast-date {
   font-size: 16px;
