--- a/src/styles.css
+++ b/src/styles.css
@@ -89,6 +89,13 @@ main {
   color: #afccf1;
 }
 
+#current-date {
+  color: #c4cafa;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+}
+
 #current-temperature-icon {
   width: 80px;
   height: 80px;
