--- a/src/styles.css
+++ b/src/styles.css
@@ -186,12 +186,20 @@ h3 {
 
 select {
   display: block;
-  width: 80%;
+  width: 100%;
   padding: 10px;
   border-radius: 10px;
   font-size: 16px;
   margin-bottom: 20px;
 }
+
+#displayTime {
+  padding-bottom: 20px;
+  text-align: right;
+  color: #2b5876;
+  font-weight: 500;
+}
+
 
 .cities {
   display: flex;
@@ -200,7 +208,7 @@ select {
   padding: 20px;
 }
 
-.dateTime {
+.timezoneInfo {
   vertical-align: middle;
 }
 
